test: create testing denepndecies and setup them: allure, kotest, mockk